--- a/site-atmosfera/menu/index.html
+++ b/site-atmosfera/menu/index.html
@@ -190,6 +190,38 @@
         </div>
     </section>
 
+    <section class="sec5">
+        <div class="div-titulo-sec5">
+            <h1 class="titulo-sec5">Galeria</h1>
+        </div>
+        <div class="container-sec5">
+            <div class="flecha-sec5 flecha-sec5-esquerda">
+                <img src="imagens/flecha-esquerda.svg" alt="" class="img-flecha-sec5">
+                
+            </div>
+            <div class="container-fotos-sec5">
+                <div class="foto-sec5 foto-sec5-1">
+                    <img src="imagens/fotos/img-1-sec5.png" alt="" class="foto-sec5" id="foto1-sec5">
+                </div>
+                <div class="foto-sec5 foto-sec5-2">
+                    <img src="imagens/fotos/img-2-sec5.png" alt="" class="foto-sec5" id="foto2-sec5">
+                </div>
+                <div class="foto-sec5 foto-sec5-3">
+                    <img src="imagens/fotos/img-3-sec5.png" alt="" class="foto-sec5" id="foto3-sec5">
+                </div>
+                <div class="foto-sec5 foto-sec5-4">
+                    <img src="imagens/fotos/img-4-sec5.png" alt="" class="foto-sec5" id="foto4-sec5">
+                </div>
+            </div>
+            <div class="flecha-sec5 flecha-sec5-direita">
+                <img src="imagens/flecha-direita.svg" alt="" class="img-flecha-sec5">
+            </div>
+        </div>
+    </section>
+    <div style="width: 100%; height: 1000px;">
+
+    </div>
+
 
 
     <script src="script.js"></script>
