--- a/site-atmosfera/menu/index.html
+++ b/site-atmosfera/menu/index.html
@@ -41,7 +41,7 @@
             <img src="imagens/menu-img.svg" alt="" class="menu-button">
         </div>
     </nav>
-
+    
     <section class="sec-img1">
     </section>
     <section class="sec1">
@@ -218,9 +218,49 @@
             </div>
         </div>
     </section>
-    <div style="width: 100%; height: 1000px;">
-
-    </div>
+    <section class="sec6">
+        <div class="container-elementos-sec6">
+            <div class="container1-sec6">
+                <div class="div-pet">
+                    <div class="div-img-container1-sec6"><img src="imagens/pet.png" alt="" class="img-container1 img1-container1"></div>
+                    <span class="span-container1 span1-container1">Espaço Pet</span> 
+                </div>
+                <div class="div-ar">
+                    <div class="div-img-container1-sec6"><img src="imagens/ar-condicionado.png" alt="" class="img-container1 img2-container1"></div>
+                    <span class="span-container1 span2-container1">Ar Condicionado</span> 
+                </div>
+                <div class="div-lereira">
+                    <div class="div-img-container1-sec6"><img src="imagens/lareira.png" alt="" class="img-container1 img3-container1"></div>
+                    <span class="span-container1 span3-container1">Lareira</span> 
+                </div>
+                
+            </div>
+            <div class="container2_3_4-sec6">
+                <div>
+                    <p class="p1-container2_3_4">Horários de funcionamento: </p>
+                    <p class="p2-container2_3_4">Sábados e domingos - 11:45 às 15:00 <br>Feriados - 11:45 às 15:00</p>
+                </div>
+            </div>
+            <div class="container2_3_4-sec6">
+                <div>
+                    <p class="p1-container2_3_4">Endereço:</p>
+                    <p class="p2-container2_3_4">Av. Guaíba, 10796 - Ipanema<br>Porto Alegre/RS, 91760-740</p>
+                </div>
+            </div>
+            <div class="container2_3_4-sec6">
+                <div>
+                    <p class="p1-container2_3_4">Telefone:</p>
+                    <p class="p2-container2_3_4">(51) 99187-7117 <br>
+                        (51) 3246-4111</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p class="p-footer">
+            Todos os direitos reservados &copy
+        </p>
+    </footer>
 
 
 
