--- a/site-atmosfera/menu/index.html
+++ b/site-atmosfera/menu/index.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atmosfera de Ipanema</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="..//assets/css/menu.css">
 </head>
 <body>
     <nav class="navigation" id="nav">
         <div class="top-nav" id="top-nav">
-            <img src="..//assets/icons/Atmosfera_logotipo.svg" alt="" class="logo-atmosfera">
+            <a href="" class="a-logo-atmosfera"><img src="..//assets/icons/Atmosfera_logotipo.svg" alt="" class="logo-atmosfera"></a>
     
             <table class="nav-table">
                 <tr>
                     <th class="sec-table">
-                        <p class="nav-botton">Sobre</p>
+                        <a href="#"><p class="nav-botton">Sobre</p></a>
                     </th>
                     <th>
                         <img src="..//assets/icons/Line1.svg" alt="" class="line1">
                     </th>
                     <th class="sec-table">
-                        <p class="nav-botton">Cardápio</p>
+                        <a href="#"><p class="nav-botton">Cardápio</p></a>
                     </th>
                     <th>
                         <img src="..//assets/icons/Line1.svg" alt="" class="line1">
                     </th>
                     <th class="sec-table">
-                        <p class="nav-botton">Eventos</p>
+                        <a href="#"><p class="nav-botton">Eventos</p></a>
                     </th>
                     <th>
                         <img src="..//assets/icons/Line1.svg" alt="" class="line1">
                     </th>
                     <th class="sec-table">
-                        <p class="nav-botton">Contato</p>
+                        <a href="../contato/contato.html"><p class="nav-botton">Contato</p></a>
                     </th>
                 </tr>
             </table>
@@ -46,7 +46,7 @@
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Cardápio</a></li>
                 <li><a href="">Eventos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="../contato/contato.html">Contato</a></li>
             </ul>
         </div>
         
