--- a/site-atmosfera/menu/index.html
+++ b/site-atmosfera/menu/index.html
@@ -14,7 +14,7 @@
             <table class="nav-table">
                 <tr>
                     <th class="sec-table">
-                        <a href="#"><p class="nav-botton">Sobre</p></a>
+                        <a href="../sobre/sobre.html"><p class="nav-botton">Sobre</p></a>
                     </th>
                     <th>
                         <img src="..//assets/icons/Line1.svg" alt="" class="line1">
@@ -43,7 +43,7 @@
         </div>
         <div class="bottom-nav" id="bottom-nav">
             <ul class="list-menu-hamburger" id="list-menu-hamburger">
-                <li><a href="">Sobre</a></li>
+                <li><a href="../sobre/sobre.html">Sobre</a></li>
                 <li><a href="">Cardápio</a></li>
                 <li><a href="">Eventos</a></li>
                 <li><a href="../contato/contato.html">Contato</a></li>
